--- a/package.json
+++ b/package.json
@@ -9,13 +9,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.3",
+    "@react-navigation/stack": "^6.3.12",
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
+    "moment": "^2.29.4",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-native": "0.70.5",
+    "react-native-camera": "^4.2.1",
+    "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "~2.8.0",
+    "react-native-image-crop-picker": "^0.39.0",
+    "react-native-image-picker": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
   },
-  "private": true
+  "private": false
 }
